<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.reaper.netexplorer.presentation.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/routerScanFragment"
        android:name="com.reaper.netexplorer.presentation.routerscan.RouterScanFragment"
        android:label="@string/router_scan"
        tools:layout="@layout/fragment_router_scan" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.reaper.netexplorer.presentation.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>