<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.routerscan.RouterScanFragment">


    <LinearLayout
        android:id="@+id/linearPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nightwhite"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:text="@string/ip_ranges" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/router_ranges_card"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/nightrec"
                android:elevation="5dp"
                android:scrollbars="vertical"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/router_ranges_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:scrollbars="vertical"
                    android:textSize="11dp" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:text="@string/ports" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/router_port_card"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/nightrec"
                android:elevation="5dp"
                android:scrollbars="vertical"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/router_ports"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:scrollbars="vertical"
                    android:textSize="11dp" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/router_save"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_save"
                    app:tint="@color/grey" />

                <ImageView
                    android:id="@+id/router_settings_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:src="@drawable/ic_settings"
                    app:tint="@color/grey" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="12dp"
                app:icon="@drawable/ic_play_arrow"
                app:iconSize="12dp" />
        </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routersList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPanel"
        app:layout_constraintBottom_toTopOf="@+id/lineadStatusBar"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/router_item"
        tools:itemCount="3"/>

    <LinearLayout
        android:id="@+id/lineadStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="end"
        android:padding="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Progress: 100%"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>